--- a/01_rollover.html
+++ b/01_rollover.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="developer" content="leonidas.tsaras@gmail.com" />
 <title>rollover</title>
 <style>
 .out {
