--- a/01_menu.html
+++ b/01_menu.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8" />
 <meta name="developer" content="leonidas.tsaras@gmail.com" />
-<title>rollover</title>
+<title>menu</title>
 <style>
 .out {
 	width:100px;
@@ -21,19 +21,18 @@
 }
 </style>
 <script>
-	//called after dom is loaded
-	window.onload=function(){
+	window.addEventListener("load", function() {
 		var divs = document.getElementsByClassName("out");
 		for (var i=0; i<divs.length; i++) {
-		  divs[i].addEventListener("mouseover", function(){
-			  		if(this.className != "out active") this.className = "out over";
-				});
-		  divs[i].addEventListener("mouseout", function(){
-			  		if(this.className != "out active") this.className = "out";
-				});
-		  divs[i].addEventListener("click",  onMenuClick);
+			divs[i].addEventListener("mouseover", function() {
+			  	if(this.className != "out active") this.className = "out over";
+			});
+			divs[i].addEventListener("mouseout", function(){
+			  	if(this.className != "out active") this.className = "out";
+			});
+			divs[i].addEventListener("click",  onMenuClick);
 		}
-	}
+	});
 
 	//function called when click on menu item
 	function onMenuClick(event) {
