--- a/02_transition.html
+++ b/02_transition.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<meta name="developer" content="leonidas.tsaras@gmail.com" />
+<title>transition</title>
 <style>
 * {
 	margin:0px;
