--- a/01_menu.html
+++ b/01_menu.html
@@ -42,17 +42,17 @@
 		}
 		event.target.className = "out active";
 		
-		//add extra script here
+		//you may add extra script here
 	}
 </script>
 </head>
 
 <body>
 <nav>
-   <div class="out">menu 1</div>
-   <div class="out">menu 2</div>
-   <div class="out">menu 3</div>
-   <div class="out">menu 4</div>
+   <div class="out">menu item 1</div>
+   <div class="out">menu item 2</div>
+   <div class="out">menu item 3</div>
+   <div class="out">menu item 4</div>
 </nav>
 </body>
 </html>
