--- a/01_menu.html
+++ b/01_menu.html
@@ -5,6 +5,12 @@
 <meta name="developer" content="leonidas.tsaras@gmail.com" />
 <title>menu</title>
 <style>
+* {
+	margin: 0px;
+	padding: 0px;
+	border: none;
+	box-sizing: border-box;
+}
 #menunav div {
 	width:100px;
 	padding:5px 0px;
