--- a/05_lightbox.html
+++ b/05_lightbox.html
@@ -11,7 +11,10 @@
     top:0px;
     width:100%;
     height:100%;
-    background:rgba(100, 100, 100, 0.5) url(images/loading.gif) no-repeat center center;        
+    background-color:rgba(100, 100, 100, 0.5);
+    background-image:url(images/loading.gif);
+    background-repeat:  no-repeat;
+    background-position: center center;    
 }
 </style>
 <script>
