--- a/08_imageslider.html
+++ b/08_imageslider.html
@@ -2,14 +2,14 @@
 <head>
 <meta charset="utf-8" />
 <meta name="developer" content="leonidas.tsaras@gmail.com" />
-<title>image slider</title>
+<title>image slider no flex</title>
 <style>
 .slidermask {
 	position:absolute;
 	border:#039 solid thin;
 	overflow:hidden;
 }
-	
+
 .sliderdiv {
 	position:absolute;
 	left:0px;
