--- a/simple-lightbox.html
+++ b/simple-lightbox.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="developer" content="leonidas.tsaras@gmail.com" />
-<title>lightbox wirh background image</title>
+<title>simple lightbox</title>
 <style>
     * {
         margin: 0;
@@ -19,22 +19,21 @@
         height: 150px;
         object-fit: cover;
     }
-
     .shadow {
         position: fixed;
+        display: block;
         left: 0px;
         top: 0px;
         width: 100%;
         height: 100%;
-        background-color: rgba(100, 100, 100, 0.5);
-        background-image: url(images/loading.gif);
-        background-repeat:  no-repeat;
-        background-position: center center;
-        background-size: 100% auto cover;
+        background-color: rgba(221, 179, 179, 0.5);
+        object-position: center;
+        object-fit: scale-down;
     }
 </style>
+
 <script>
-    window.addEventListener('load', init);
+window.addEventListener('load', init);
 
     function init() {
         const images = Array.from(document.querySelectorAll("nav#imagenav > img"));
@@ -46,26 +45,22 @@
         });
     }
 
-    function getLightBox(url) {
-        var shadow = document.createElement("div");
-        shadow.className = "shadow";
-        shadow.addEventListener("click", function() {
+    function getLightBox(src) {
+        var image = document.createElement("img");
+        image.setAttribute("src", src);
+        image.className = "shadow";
+        image.addEventListener("click", function() {
 			document.body.removeChild(this);
 		});
-        const image = new Image();
-        image.setAttribute("src", url);
-        image.addEventListener("load", function() {
-            shadow.style.backgroundImage = `url(${url})`;
-        });
-        document.body.appendChild(shadow);
+        document.body.appendChild(image);
     }
 </script>
 </head>
 <body>
-    <nav id="imagenav">
+    <nav id = "imagenav">
     	<img src="images/thumb-1.jpg" data-src="images/image-1.jpg" />
         <img src="images/thumb-2.jpg" data-src="images/image-2.jpg" />
-        <img src="images/thumb-7.jpg" data-src="https://images.pexels.com/photos/3635300/pexels-photo-3635300.jpeg" />
+        <img src="images/coffee.jpeg" data-src="images/coffee.jpeg" />
     </nav>
 </body>
 </html>
